# smartbar-backoffice/src/main/java/de/schulte/smartbar/backoffice/api/ArticlesResource.java
@@ -1,48 +1,91 @@
 package de.schulte.smartbar.backoffice.api;
 
 import java.net.URI;
-import java.util.List;
+import java.util.Optional;
 
-import de.schulte.smartbar.backoffice.api.model.Article;
+import de.schulte.smartbar.backoffice.api.model.ApiArticle;
+import de.schulte.smartbar.backoffice.entity.Article;
+import de.schulte.smartbar.backoffice.entity.Category;
 import de.schulte.smartbar.backoffice.service.ArticlesService;
-import io.smallrye.common.annotation.NonBlocking;
+import de.schulte.smartbar.backoffice.service.CategoriesService;
 import jakarta.inject.Inject;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotNull;
 import jakarta.ws.rs.core.Response;
 
-@NonBlocking
 public class ArticlesResource implements ArticlesApi {
 
     private final ArticlesService articlesService;
+    private final CategoriesService categoriesService;
 
     @Inject
-    public ArticlesResource(ArticlesService articlesService) {
+    public ArticlesResource(ArticlesService articlesService, CategoriesService categoriesService) {
         this.articlesService = articlesService;
+        this.categoriesService = categoriesService;
     }
 
     @Override
-    public Response articlesArticleIdDelete(String articleId) {
+    public Response articlesArticleIdDelete(Long articleId) {
+         final Optional<Article> article = articlesService.deleteById(articleId);
+        if (article.isEmpty()) {
+            return Response.status(Response.Status.NOT_FOUND).build();
+        }
         return Response.ok().build();
     }
 
     @Override
-    public Response articlesArticleIdGet(String articleId) {
-        return Response.ok(articlesService.get()).build();
+    public Response articlesArticleIdGet(Long articleId) {
+        final Optional<Article> article = articlesService.getById(articleId);
+        if (article.isEmpty()) {
+            return Response.status(Response.Status.NOT_FOUND).build();
+        }
+        return Response.ok(mapArticleToApiArticle(article.get())).build();
     }
 
     @Override
-    public Response articlesArticleIdPut(String articleId, @Valid Article article) {
+    public Response articlesArticleIdPut(Long articleId, @Valid ApiArticle apiArticle) {
+        final Optional<Article> existingArticle = articlesService.getById(articleId);
+        if (existingArticle.isEmpty()) {
+            return Response.status(Response.Status.NOT_FOUND).build();
+        }
+        final Article article = existingArticle.get();
+        mapApiArticleToArticle(apiArticle, article);
+        articlesService.update(article);
         return Response.ok().build();
     }
 
     @Override
     public Response articlesGet() {
-        return Response.ok(List.of(articlesService.get())).build();
+        return Response.ok(articlesService.listAll().stream().map(this::mapArticleToApiArticle).toList()).build();
     }
 
     @Override
-    public Response articlesPost(@Valid Article article) {
-        return Response.created(URI.create("todo")).build();
+    public Response articlesPost(@NotNull Long xCategoryId, @Valid ApiArticle apiArticle) {
+        final Optional<Category> category = categoriesService.getById(xCategoryId);
+        if(category.isEmpty()) {
+            return Response.status(Response.Status.NOT_FOUND).build();
+        }
+        final Article article = new Article();
+        mapApiArticleToArticle(apiArticle, article);
+        article.setCategory(category.get());
+        final Article persitedArticle = articlesService.persist(article);
+        return Response.created(URI.create("/articles/" + persitedArticle.getId())).build();
     }
 
+    private void mapApiArticleToArticle(ApiArticle apiArticle, Article article) {
+        article.setName(apiArticle.getName());
+        article.setDescription(apiArticle.getDescription());
+        article.setPrice(apiArticle.getPrice());
+        article.setPictureBase64(apiArticle.getPicture());
+    }
+
+    private ApiArticle mapArticleToApiArticle(Article article) {
+        final ApiArticle apiArticle = new ApiArticle();
+        apiArticle.setDescription(article.getDescription());
+        apiArticle.setName(article.getName());
+        apiArticle.setPicture(article.getPictureBase64());
+        apiArticle.setPrice(article.getPrice());
+        apiArticle.setId(article.getId());
+        return apiArticle;
+    }
 }
