# smartbar-backoffice/src/main/java/de/schulte/smartbar/backoffice/entity/Article.java
@@ -1,0 +1,59 @@
+package de.schulte.smartbar.backoffice.entity;
+
+import java.math.BigDecimal;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.ManyToOne;
+
+@Entity
+@jakarta.persistence.Table(name = "sbo_article")
+public class Article extends BaseEntity {
+
+    private String name;
+    private BigDecimal price;
+    private String description;
+    private String pictureBase64;
+
+    @ManyToOne
+    private Category category;
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public BigDecimal getPrice() {
+        return price;
+    }
+
+    public void setPrice(BigDecimal price) {
+        this.price = price;
+    }
+
+    public String getDescription() {
+        return description;
+    }
+
+    public void setDescription(String description) {
+        this.description = description;
+    }
+
+    public String getPictureBase64() {
+        return pictureBase64;
+    }
+
+    public void setPictureBase64(String pictureBase64) {
+        this.pictureBase64 = pictureBase64;
+    }
+
+    public Category getCategory() {
+        return category;
+    }
+
+    public void setCategory(Category category) {
+        this.category = category;
+    }
+}
